--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,9 @@
     <div>
       <img src="data:image/jpg;base64,{{ img_base64 }}" style="max-width: 30%">
     </div>
-    <div>
-      Description: {{ description }}
-    </div>
+    <div>Description: {{ description }}</div>
+    <div>Latitude: {{ latitude }}</div>
+    <div>Longitude: {{ longitude }}</div>
+    <iframe src="https://maps.google.co.jp/maps?q={{ description }}&output=embed&t=m&z=16&hl=ja" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="600" height="450"></iframe>
   </body>
 </html>
