modify to upload a file

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,12 @@
     <title>Vision Map</title>
   </head>
   <body>
-    <p>hello world!</p>
+    <h1>Vision Map</h1>
+    <p>Upload your file!</p>
     <div>
-      <form method=post action="" enctype="multipart/form-data">
-        <input type=submit value='Upload' name='submit'>
+      <form method=post action="/" enctype="multipart/form-data">
+        <input type=file name="file">
+        <input type="submit" value="upload"/>
       </form>
     </div>
     <div>
