use translation api

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
       <img src="data:image/jpg;base64,{{ img_base64 }}" style="max-width: 30%">
     </div>
     <div>Description: {{ description }}</div>
+    <div>Description_ja: {{ description_ja }}</div>
     <div>Latitude: {{ latitude }}</div>
     <div>Longitude: {{ longitude }}</div>
     <iframe src="https://maps.google.co.jp/maps?q={{ description }}&output=embed&t=m&z=16&hl=ja" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="600" height="450"></iframe>
